Elixir_Prod/force-app/main/default/objects/Cash_Out__c/Cash_Out__c.object-meta.xml
<CustomObject>
    <label>Cash Out</label>
    <nameField>
        <label>Cash Out Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash Out</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>