Elixir_Prod/force-app/main/default/objects/Cash_Out__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Improvements</fullName>
            </value>
            <value>
                <fullName>Purchase Goods</fullName>
            </value>
            <value>
                <fullName>Holiday/Travel</fullName>
            </value>
            <value>
                <fullName>Divorce Settlement</fullName>
            </value>
            <value>
                <fullName>Personal Investments - shares etc</fullName>
            </value>
            <value>
                <fullName>Property Purchase</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Working Capital</fullName>
            </value>
            <value>
                <fullName>Buy Asset/Investment</fullName>
            </value>
            <value>
                <fullName>Marketing/Advertising Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>